Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3309

Management broker object port is not set if broker started with port number set to 0

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.13
    • 0.14
    • None
    • None

    Description

      The management broker object has a port attribute which is set to the value passed to the broker when it is started. If the value of port is zero, then the broker will use an unused port number and return this number on the command line. However, the broker management object is not updated, and returns a value of 0.

      Attachments

        Activity

          People

            kpvdr Kim van der Riet
            kpvdr Kim van der Riet
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: