QPID-3309: This fix sets the value of the port number in management if the broker is started with a port value of 0.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1143078 13f79535-47bb-0310-9956-ffa450edef68